--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
-    font-family: 'Catamaran', sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 200;
     outline: none;
 }
 
@@ -12,130 +13,60 @@ body {
     background-size: cover;
 }
 
-h1 {
-    margin: 0;
-    font-size: 5em;
+form {
+    display: flex;
 }
 
-form {
-    padding-bottom: 2em;
+form label {
+    padding: 0 20px;
+    opacity: .5;
+    cursor: pointer;
+    margin: auto;
+}
+
+form label:hover {
+    opacity: 1;
+}
+
+h1 {
+    margin: .3em;
+    font-size: 5em;
+    color: rgba(175, 47, 47, 0.15);
 }
 
 ul {
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
     -webkit-padding-start: 0;
-    box-shadow: 0 20px 25px rgba(0, 0, 0, .1);
-    border-radius: 20px;
     background-color: #fff;
     position: relative;
 }
 
-.pappershog ul::after {
-    content: '';
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    height: 50px;
-    border-radius: 20px;
-    z-index: -1;
-    overflow: hidden;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
-}
-
-.pappershog ul:empty::after {
-    box-shadow: unset;
-}
-
-.pappershog ul {
-    box-shadow: unset;
-}
-
 li {
     text-align: left;
-    padding: 15px 25px;
-    border: 0;
+    padding: 15px 12px;
+    border-top: solid 1px #f6f6f6;
     list-style-type: none;
     background-color: #fff;
-    border-radius: 20px;
+    align-items: center;
 }
 
-.input {
-    max-width: 30em;
-    height: 2em;
-    width: -webkit-fill-available;
-}
-
-.input, button {
-    box-shadow: 0 10px 25px rgba(0, 0, 0, .1);
-    font-size: 1em;
-    border: 0;
-    border-radius: 50px;
-    padding: 15px 25px;
-    transition: box-shadow .1s;
-    background-color: #fff !important;
-}
-
-.input:hover, button:hover {
-    box-shadow: 0 20px 25px rgba(0, 0, 0, .1);
-}
-
-button.active {
-    border: 1px solid rgba(0, 0, 0, 0.411);
-}
-
-button {
-    margin-bottom: 2em;
-    font-size: .8em;
-    padding: .7em 1.4em .5em;
-    cursor: pointer;
-}
-
-input[type='checkbox'] {
-    height: 2em;
-    width: 2em;
-	background:#fff;
-	border:1px solid #d5d5d6;
-    color:#96999D;
-    -webkit-appearance: none;
-    cursor: pointer;
-}
-
-input[type='checkbox']:checked
-{
-    position:relative;
-}
-
-input[type='checkbox']:checked::before
-{
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    color: #000;
-    content: '\f00c';
-    display: block;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    position: absolute;
-    top: 4px;
-    left: 0px;
-    opacity: 0.5;
+li:last-child {
+    border-bottom: solid 1px #f6f6f6;
 }
 
 li span {
     padding: 0 1em;
-    vertical-align: top;
 }
 
 li .edit {
     margin: 0 1em;
-    vertical-align: top;
     border: 1px solid rgba(0, 0, 0, 0.2);
     font-size: 1em;
-    padding: 0;
+    padding: 0.5em;
     margin-top: -1px;
     margin-bottom: -1px;
+    margin-left: 7px;
 }
 
 li i {
@@ -153,9 +84,79 @@ li input:checked ~ span {
     opacity: .3;
 }
 
+button.active {
+    border: 1px solid rgba(175, 47, 47, 0.2)
+}
+
+button {
+    border: 0;
+    color: #000;
+    background-color: #fff;
+    font-size: .8em;
+    padding: .6em 1.2em .5em;
+    border-radius: .4em;
+    cursor: pointer;
+}
+
+input[type='text'] {
+    height: 2em;
+    width: -webkit-fill-available;
+}
+
+input[type='text']::placeholder {
+    font-style: italic;
+}
+
+input[type='text'] {
+    font-size: 1.3em;
+    border: 0;
+    padding: 15px 15px;
+    transition: box-shadow .1s;
+    background-color: #fff;
+}
+
+input[type='checkbox'] {
+    -webkit-appearance: none;
+    height: 3em;
+    width: 3em;
+    border-radius: 10em;
+	border:1px solid #d5d5d6;
+    color:#96999D;
+    cursor: pointer;
+}
+
+input[type='checkbox']:checked {
+    position:relative;
+    border:1px solid green;
+    opacity: 0.5;
+}
+
+input[type='checkbox']:checked::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    font-size: 1.4em;
+    color: green;
+    content: '\f00c';
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    top: 9px;
+}
+
+.ruta {
+    background-color: #fff;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, .1);
+}
+
+.marked {
+    opacity: 1;
+}
+
 .small-container {
     margin: 0 auto;
-    max-width: 800px;
+    max-width: 550px;
 }
 
 .todoGrid {
@@ -174,14 +175,27 @@ li input:checked ~ span {
     color: #c01515;
 }
 
-.bottomGrid {
-    margin: 2em 0 1em;
+#bottom {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
+    padding: 7px 0;
+    z-index: -1;
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
+}
+
+#todoCountText p {
+    color: #000;
+    font-size: .8em;
+    margin: 0;
+    padding: .6em 1.2em .5em;
 }
 
 .hidden {
-    display: none;
+    display: none !important;
+}
+
+.nonvisible {
+    visibility: hidden;
 }
 
 .completedFilter li, .activeFilter li.todoCompleted {
@@ -192,107 +206,13 @@ li input:checked ~ span {
     display: grid;
 }
 
-#addForm label {
-    position: relative;
-    top: 7px;
-    padding: 0 20px;
-    opacity: .5;
-    cursor: pointer;
-}
-
-#addForm label:hover {
-    opacity: 1;
-}
-
-.modal {
-    opacity: 0;
-    visibility: hidden;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    text-align: left;
-    background: rgba(0,0,0, .9);
-    transition: opacity .25s ease;
-}
-
-.modal_bg {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    cursor: pointer;
-}
-
-.hidden:checked + .modal {
-    opacity: 1;
-    visibility: visible;
-}
-
-.hidden:checked + .modal .modal_inner {
-    top: 0;
-}
-
-.modal_inner {
-    transition: top .25s ease;
-    position: absolute;
-    top: -20%;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 50%;
-    margin: auto;
-    overflow: auto;
-    background: #fafafa;
-    border-radius: 20px;
-    padding: 1em 2em;
-    height: 50%;
-}
-
-.modal_close {
-    position: absolute;
-    right: 1em;
-    top: 1em;
-    width: 1.1em;
-    height: 1.1em;
-    cursor: pointer;
-}
-
-.modal_close:after,
-.modal_close:before {
-    content: '';
-    position: absolute;
-    width: 2px;
-    height: 1.5em;
-    background: #ccc;
-    display: block;
-    transform: rotate(45deg);
-    left: 50%;
-    margin: -3px 0 0 -1px;
-    top: 0;
-}
-
-.modal_close:hover:after,
-.modal_close:hover:before {
-    background: #aaa;
-}
-  
-.modal_close:before {
-    transform: rotate(-45deg);
-}
-  
-@media screen and (max-width: 768px) {
-    .modal_inner {
-        width: 90%;
-        height: 90%;
-        box-sizing: border-box;
-    }
-}
-
 .credits {
-    position: absolute;
-    bottom: 0px;
+    margin-top: 5em;
+    font-size: .9em;
+    color: #96999D;
     text-align: center;
+}
+
+.smaller {
+    font-size: .7em;
 }
