--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ li input:checked ~ span {
 }
 
 button.active {
-    border: 1px solid rgba(175, 47, 47, 0.2)
+    border: 1px solid rgba(175, 47, 47, 0.2);
 }
 
 button {
@@ -175,21 +175,6 @@ input[type='checkbox']:checked::before {
     color: #c01515;
 }
 
-#bottom {
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    padding: 7px 0;
-    z-index: -1;
-    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
-}
-
-#todoCountText p {
-    color: #000;
-    font-size: .8em;
-    margin: 0;
-    padding: .6em 1.2em .5em;
-}
-
 .hidden {
     display: none !important;
 }
@@ -215,4 +200,28 @@ input[type='checkbox']:checked::before {
 
 .smaller {
     font-size: .7em;
+}
+
+#bottom {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    padding: 7px 0;
+    z-index: -1;
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
+}
+
+#bottom button:hover {
+    border: 1px solid rgba(175, 47, 47, 0.1);
+}
+
+#todoCountText p {
+    color: #000;
+    font-size: .8em;
+    margin: 0;
+    padding: .6em 1.2em .5em;
+}
+
+#clear:hover {
+    text-decoration: underline;
+    border: 0;
 }
