--- a/style.css
+++ b/style.css
@@ -84,18 +84,22 @@ li input:checked ~ span {
     opacity: .3;
 }
 
-button.active {
-    border: 1px solid rgba(175, 47, 47, 0.2);
-}
-
 button {
-    border: 0;
+    border: 1px solid transparent;
     color: #000;
     background-color: #fff;
     font-size: .8em;
     padding: .6em 1.2em .5em;
     border-radius: .4em;
     cursor: pointer;
+}
+
+button.active {
+    border: 1px solid rgba(175, 47, 47, 0.2);
+}
+
+button:hover {
+    border: 1px solid rgba(175, 47, 47, 0.1);
 }
 
 input[type='text'] {
@@ -208,10 +212,6 @@ input[type='checkbox']:checked::before {
     padding: 7px 0;
     z-index: -1;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
-}
-
-#bottom button:hover {
-    border: 1px solid rgba(175, 47, 47, 0.1);
 }
 
 #todoCountText p {
